ft/src/tui/snapshots/ft__tui__tests__tasks_tab_empty_80x24.snap
---
source: ft/src/tui/tests.rs
expression: frame
---
  1 Welcome  │  2 Tasks                                                         
┌ sidebar ─────────────┐┌ query ───────────────────────────────────────────────┐
│                      ││not done and due before 2026-05-18 sort by due, priori│
│ Sun 10 May           │└──────────────────────────────────────────────────────┘
│ 14:32:05             │┌ tasks ───────────────────────────────────────────────┐
│                      ││                   no matching tasks                  │
│ ── views ──          ││                                                      │
│ ▶ Search             ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
└──────────────────────┘└──────────────────────────────────────────────────────┘
 vault: test-vault  ·  tab: Tasks          refreshed [HH:MM:SS]      mode: normal
