ft/src/tui/snapshots/ft__tui__tests__tasks_tab_parse_error_80x24.snap
---
source: ft/src/tui/tests.rs
expression: frame
---
  1 Welcome  │  2 Tasks                                                         
┌ sidebar ─────────────┐┌ query ───────────────────────────────────────────────┐
│                      ││totally bogus                                         │
│ Sun 10 May           │└──────────────────────────────────────────────────────┘
│ 14:32:05             │┌ tasks ───────────────────────────────────────────────┐
│                      ││                                                      │
│ ── views ──          ││                   query parse error                  │
│ ▶ Search             ││                                                      │
│                      ││             unknown identifier `totally`             │
│                      ││                                                      │
│                      ││               press / to edit the query              │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
└──────────────────────┘└──────────────────────────────────────────────────────┘
 vault: test-vault  ·  tab: Tasks          refreshed [HH:MM:SS]      mode: normal
